--- a/components/payform/default.htm
+++ b/components/payform/default.htm
@@ -7,7 +7,7 @@
         </tr>
         <tr>
             <td> {{'Payment system'|_}} </td>
-            <td> Payeer </td>
+            <td> Paykassa </td>
         </tr>
     </table>
     
